# head-pose-estimation

./: CMakeCache.txt  CMakeLists.txt  CRForest.h  CRForestEstimator.cpp  CRForestEstimator.h  CRTree.cpp  CRTree.h  Makefile  README.txt  _README.txt  change_linkdir.sh  config.txt  head_pose_estimation_demo  head_pose_estimation_demo_freenect  head_pose_estimation_demo_openni  main.cpp  readme.txt
data/: depth.cal
demo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  common.hpp  freeglut_std.h  gl_camera.cpp  gl_camera.hpp  main.cpp  math.hpp  matrix.hpp  matrix_fixed.hpp  rigid_motion.hpp  trackball.hpp  vector.hpp  vector_fixed.hpp
demo/head_pose_estimation_demo/: head_pose_estimation_demo.1
demo/head_pose_estimation_demo.dir/: CXX.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  flags.make  link.txt
demo/head_pose_estimation_demo/head_pose_estimation_demo.xcodeproj/: matthias.pbxuser  matthias.perspectivev3  project.pbxproj
demo/head_pose_estimation_demo/mac-libs/: libopencv_imgproc.2.3.1.dylib
mac-libs/: libfreenect.0.1.2.dylib  liblo.7.dylib  libopencv_core.2.3.1.dylib  libusb-1.0.0.dylib
pd/: head_pose_estimation.pd  median-3.pd  median-5.pd
pd/list-abs/: list-abs-help.pd  list-sort.pd
pd/list-abs/examples/.svn/: all-wcprops  entries
pix_head_pose_estimation/: CMakeLists.txt  Makefile  README.txt  pix_head_pose_estimation-help.pd  pix_head_pose_estimation.cpp  pix_head_pose_estimation.h
pix_head_pose_estimation/trees/: new_000.tree  new_001.tree  new_005.tree  new_007.tree
trees/: new_003.tree  new_005.tree  new_006.tree  new_007.tree  new_009.tree
